Fix bug not showing sidebar background

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ main {
 
 .sidebar {
     min-height: 100vh;
-    background-image: url(../assets/images/background.jpg);
+    background-image: url(./assets/images/background.jpg);
     background-size: cover;
     flex: 1;
     display: flex;
